--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -1,5 +1,8 @@
-.Header{
-  background-color: #38aef0;
+$content-color: #31aef0;
+$text-color: #434a54;
+
+.flash-box{
+  background-color: $content-color;
   color: white;
   text-align: center;
   font-size: 1rem;
@@ -27,9 +30,10 @@
         line-height: 40px;
         padding: 0 20px;
         margin-top: 30px;
-        border: solid 1px #38aef0;
+        border: solid 1px $content-color;
         position: absolute;
         right: 40px;
+        color: $content-color;
       }
       &__left-box{
         margin-top: 35px;
@@ -44,18 +48,75 @@
         }
       }
     }
-    &__Message{
+    &__Messages{
       height: calc(100vh - 190px);
       padding: 46px 40px;
       background-color: #fafafa;
       overflow: scroll;
       box-sizing: border-box;
+      &__message{
+        padding-bottom: 40px;
+        &__upper-info{
+          margin-bottom: 10px;
+          display: flex;
+          &__talker{
+            font-size: 16px;
+            color: $text-color;
+            font-weight: bold;
+          }
+          &__day{
+            font-size: 12px;
+            color: #999999;
+            margin-left: 10px;
+          }
+        }
+        &__text{
+          font-size: 14px;
+          color: $text-color;
+        }
+      }
     }
     &__Form{
       height: 90px;
       padding: 20px 40px;
       background-color: #ddd;
       box-sizing: border-box;
+      &__new-message{
+        display: flex;
+        &__send-btn{
+          background-color: $content-color;
+          color: white;
+          height: 50px;
+          width: 100px;
+          margin-left: 15px;
+          padding: 0px 30px;
+          line-height: 50px;
+          text-align: center;
+        }
+        &__input-box{
+          position: relative;
+          width: 100%;
+          margin-right: 15px;
+          &__type-text{
+            height: 50px;
+            width: 100%;
+            padding: 0 0 0 10px;
+            color: $text-color;
+            border-style: none;
+            background-color: white;
+            line-height: 50px;
+            font-size: 16px;
+            color: $text-color;
+          }
+          &__image{
+            font-size: 1.3rem;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+          }
+        }
+      }
     }
   }
 
@@ -78,15 +139,32 @@
         font-weight: bold;
         display: flex;
         justify-content: space-between;
+        &__user-menu{
+          &--cog{
+            color: white;
+          }
+          &--edit{
+            color: white;
+          }
+        }
       }
     }
-    &__Group{
+    &__Groups{
       height: calc(100vh - 100px);
       background-color: #2f3e51;
       padding: 20px 20px 0;
       overflow: scroll;
       box-sizing: border-box;
-
+      &__gruop{
+        margin-bottom: 40px;
+      }
+        &__name{
+          font-size: 15px;
+          margin-bottom: 5px;
+        }
+        &__latest-message{
+          font-size: 11px;
+        }
     }
   }
 }
