--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -14,7 +14,7 @@
     }
     &__lists {
       display: inline-block;
-      float: right;
+      // float: right;
       .list {
         display: inline-block;
       }
