--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -1,9 +1,12 @@
 .chat {
   width: calc(100% - 300px);
   .header {
+    overflow: scroll;
+    // display: flex;
     box-sizing: border-box;
     height: 100px;
     padding: 0 40px;
+    border-bottom: solid 1px #eee;
     .left-header {
       float: left;
       &__title {
@@ -38,10 +41,11 @@
   }
 
   .messages {
-    background-color: #FAFAFA;
     box-sizing: border-box;
+    overflow: scroll;
+    background-color: #FAFAFA;
     padding: 46px 40px 0;
-    height: calc(100% - 100px - 90px);
+    height: 600px;
     .message {
       .upper-message {
         display: flex;
