--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -77,6 +77,7 @@ $text-color: #434a54;
       }
     }
     &__Form{
+      position: fixed;
       height: 90px;
       padding: 20px 40px;
       background-color: #ddd;
