--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -3,6 +3,7 @@
   color: $white;
   width: 300px;
   .header {
+    width: auto;
     background-color: $side_blue_dark;
     height: 100px;
     line-height: 100px;
@@ -14,7 +15,7 @@
     }
     &__lists {
       display: inline-block;
-      // float: right;
+      float: right;
       .list {
         display: inline-block;
       }
@@ -27,8 +28,9 @@
 
   .groups {
     background-color: $side_blue_light;
-    height: calc(100vh - 100px);
+    height: 690px;
     padding: 0 20px;
+    overflow: scroll;
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
