--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -7,11 +7,11 @@
           %li= message
   .chat-group-form__field
     .chat-group-form__field--left
-      -# = f.label :name, class: 'chat-group-form__label'
-      %label.chat-group-form__label{for: "chat_group_name"} グループ名
+      = f.label :name, class: 'chat-group-form__label'
+      -# %label.chat-group-form__label{for: "chat_group_name"} グループ名
     .chat-group-form__field--right
-      -# = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
-      %input#chat_group_name.chat-group-form__input{name: "chat_group[name]", placeholder: "グループ名を入力してください", type: "text", value: "#{ group.name }"}/
+      = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
+      -# %input#chat_group_name.chat-group-form__input{name: "chat_group[name]", placeholder: "グループ名を入力してください", type: "text", value: "#{ group.name }"}/
   .chat-group-form__field.clearfix
     / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
     
